Step2 - 수강신청(도메인 모델) (#379)
* refactor : 메서드명 수정

* refactor : 답변 삭제 이력을 새 리스트로 반환하여 질문 삭제 이력에 추가하도록 변경

* refactor : Arrays.asList -> List.of로 변경

* refactor : CQRS 패턴 적용 - 질문 삭제와 이력 저장 분리

* refactor : 답변 삭제 & 이력 추가 시 스트림 적용

* feat : 2단계 기능 요구사항 정의

* docs : 2단계 기능 요구사항 정의

* feat : 도메인 추가

* docs : 기능 요구사항 추가

* feat : 이미지 타입 체크 기능 추가

* feat : 이미지 크기 체크 기능 추가

* feat : 이미지 길이 및 비율 체크 기능 추가

* feat : 강의 상태 체크 로직 추가

* feat : 강의 시작일, 종료일에 따른 강의 상태 체크 추가

* feat : 무료 강의 수강신청 기능 추가

* feat : 유료 강의 수강신청 기능 추가

* feat : 강의 상태에 따른 수강신청 기능 추가

* refactor : 지원하는 이미지 형식이 아닌 형식도 받아서 예외 처리할 수 있도록 수정

* feat : 잘못된 이미지 형식에 대한 예외 처리

* feat : 이미지 형식 제한에 맞는 이미지를 가지는 강의 생성

* refactor : 무료 강의 최대 인원 null 설정할 있도록 최대 인원 타입을 Integer로 변경, 테스트 수정

* feat : 수강생이 결제한 금액과 유료강의의 수강료가 일치하지 않은 경우 예외 처리

* test : 수강생이 결제한 금액과 유료강의의 수강료가 일치하면 수강신청 완료 테스트

* refactor : 생성자 변경

* feat : 과정에 강의 추가하는 기능 추가

* refactor : 강의 시작일, 종료일 SessionPeriod 클래스로 분리

* refactor : 학생 리스트와 최대인원 Students 클래스로 분리

* refactor : 수강료와 결제금액이 일치하지 않을 경우 예외처리 Payment로 이동 및 테스트 추가

* refactor : 강의 상태와 수강생을 Enrollment 클래스로 분리

* refactor : 패키지 분리

* refactor : enum에서 불필요한 부분 제거

* refactor : Enrollment의 SessionState를 SessionPeriod로 이동 및 관련 로직 이동, 강의 시작일과 종료일 순서 검증 추가

* refactor : Students의 capacity를 Session으로 이동

* feat : 강의에 과정 추가 기능 추가 및 과정에 강의 추가 테스트

* refactor : Sessions 일급컬렉션 적용